--- a/internal/pkg/generator/tmpl/octopus/mock.tmpl
+++ b/internal/pkg/generator/tmpl/octopus/mock.tmpl
@@ -17,9 +17,54 @@ import (
 {{ $pkgName := .ARPkg }}
 {{ $PublicStructName := .ARPkgTitle -}}
 {{ $fields := .FieldList }}
+{{ $procfields := .ProcFieldList }}
 {{ $serializers := .Serializers -}}
 {{ $fidx := .FieldMap }}
 
+{{ if $procfields }}
+func (obj *{{ $PublicStructName }}) MockSelectResponse() ([][]byte, error) {
+	tuple := [][]byte{}
+
+	var data []byte
+
+	var err error
+
+{{ range $ind, $fstruct := $procfields -}}
+{{ $ptype := $fstruct.Type -}}
+    {{ if ne $ptype 1 -}}
+	data, err = pack{{ $fstruct.Name }}([]byte{}, obj.Get{{ $fstruct.Name }}())
+	if err != nil {
+		return nil, err
+	}
+
+	tuple = append(tuple, data)
+    {{- end }}
+{{ end }}
+	return tuple, nil
+}
+
+func MockCallRequest(ctx context.Context, params {{ $PublicStructName }}Params) []byte {
+	log := activerecord.Logger()
+	ctx = log.SetLoggerValueToContext(ctx, map[string]interface{}{"MockCallRequest": params, "Proc": "{{ $PublicStructName }}"})
+
+	return octopus.PackLua(procName, params.arrayValues()...)
+}
+
+func (obj *{{ $PublicStructName }}) RepoSelector(ctx context.Context) (any, error) {
+	data, err := Call(ctx, obj.params)
+	if err != nil {
+		return nil, err
+	}
+
+	if data == nil {
+		return nil, fmt.Errorf("call {{ $PublicStructName }} with params %v: %w", obj.params, activerecord.ErrNoData)
+	}
+
+	return data, err
+}
+{{- end }}
+
+{{ if $fields }}
 func (obj *{{ $PublicStructName }}) MockSelectResponse() ([][]byte, error) {
 	tuple := [][]byte{}
 	
@@ -83,7 +128,7 @@ func (obj *{{ $PublicStructName }}) Mock{{ $ind.Selector }}Request(ctx context.C
 			{{ $serializer := index $serializers $sname -}}
 			{{ $rtype := $serializer.Type -}}
 func serialize{{ $sfield.Name}}(ctx context.Context, v{{ $sfield.Name}} {{ $rtype }}) {{ $sfield.Format }} {
-	v, err := {{ $serializer.ImportName }}.{{ $serializer.Marshaler }}({{ $fstruct.SerializerParams }} v{{ $sfield.Name}})
+	v, err := {{ $serializer.ImportName }}.{{ $serializer.Marshaler }}({{ $fstruct.Serializer.Params }} v{{ $sfield.Name}})
 	if err != nil {
 		activerecord.Logger().Fatal(ctx, err)
 	}
@@ -162,7 +207,7 @@ return func() (activerecord.MockerLogger, error){
 					{{ if ne $serlen 0 }}
 						{{ $sname := index $sfield.Serializer 0 -}}
 						{{ $serializer := index $serializers $sname -}}
-						{{ $serparams := $sfield.SerializerParams -}}
+						{{ $serparams := $sfield.Serializer.Params -}}
 						skey, err := {{ $serializer.ImportName }}.{{ $serializer.Marshaler }}({{ $serparams }}{{ $packparam }})
 						if err != nil {
 							return activerecord.MockerLogger{}, err
@@ -323,3 +368,4 @@ func (obj *{{ $PublicStructName }}) mockInsertReplace(ctx context.Context, inser
 
 	return w
 }
+{{- end }}
